# thing

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  pytest.ini
core/: settings.py
thing/: admin.py  models.py
thing/tests/: model_tests.py
utils/: models.py
utils/tests/: auth_tests.py  conftest.py
